src/snapshots/rbx_types_ops__lerp__cframe_lerp.snap
---
source: src/lerp.rs
expression: "Variant::from(CFrame::new(Vector3::new(10.0, 10.0, 10.0),\nMatrix3::new(Vector3::new(10.0, 10.0, 10.0), Vector3::new(10.0, 10.0, 10.0),\nVector3::new(10.0, 10.0,\n10.0)))).lerp(&Variant::from(CFrame::new(Vector3::new(20.0, 20.0, 20.0),\nMatrix3::new(Vector3::new(20.0, 20.0, 20.0), Vector3::new(20.0, 20.0, 20.0),\nVector3::new(20.0, 20.0, 20.0)))), 0.789)"
---
CFrame:
  position:
    - 17.89
    - 17.89
    - 17.89
  orientation:
    - - 17.89
      - 17.89
      - 17.89
    - - 17.89
      - 17.89
      - 17.89
    - - 17.89
      - 17.89
      - 17.89
