src/snapshots/rbx_types_ops__lerp__color3uint8_lerp.snap
---
source: src/lerp.rs
expression: "Variant::from(Color3uint8::new(10, 10,\n10)).lerp(&Variant::from(Color3uint8::new(20, 20, 20)), 0.789)"
---
Color3uint8:
  - 17
  - 17
  - 17
