src/snapshots/rbx_types_ops__lerp__matrix3_lerp.snap
---
source: src/lerp.rs
expression: "Matrix3::new(Vector3::new(10.0, 10.0, 10.0), Vector3::new(10.0, 10.0, 10.0),\nVector3::new(10.0, 10.0,\n10.0)).lerp(&Matrix3::new(Vector3::new(20.0, 20.0, 20.0),\nVector3::new(20.0, 20.0, 20.0), Vector3::new(20.0, 20.0, 20.0)), 0.789)"
---
- - 17.89
  - 17.89
  - 17.89
- - 17.89
  - 17.89
  - 17.89
- - 17.89
  - 17.89
  - 17.89
