src/snapshots/rbx_types_ops__lerp__vector2_lerp.snap
---
source: src/lerp.rs
expression: "Variant::from(Vector2::new(10.0,\n10.0)).lerp(&Variant::from(Vector2::new(20.0, 20.0)), 0.789)"
---
Vector2:
  - 17.89
  - 17.89
