src/snapshots/rbx_types_ops__lerp__vector2int16_lerp.snap
---
source: src/lerp.rs
expression: "Variant::from(Vector2int16::new(10,\n10)).lerp(&Variant::from(Vector2int16::new(20, 20)), 0.789)"
---
Vector2int16:
  - 17
  - 17
